--- a/index.html
+++ b/index.html
@@ -27,31 +27,28 @@
   </style>
 </head>
 <body>
+  <div id="fire-container"></div>
+
   <script>
-    let fireActive = true;
+    const container = document.getElementById("fire-container");
 
     function createFire() {
-      if (!fireActive) return;
-
       const fire = document.createElement("div");
       fire.className = "fire";
       fire.style.left = Math.random() * window.innerWidth + "px";
       fire.style.bottom = "0px";
       fire.innerText = "🔥";
-      document.body.appendChild(fire);
-      setTimeout(() => fire.remove(), 3000);
+      container.appendChild(fire);
     }
 
-    // Spawn fire every 200ms
+    // Start creating fire every 200ms
     const fireInterval = setInterval(createFire, 200);
 
-    // After 5 seconds: stop spawning AND remove all
+    // After 5 seconds: stop fire AND remove everything
     setTimeout(() => {
-      fireActive = false; // stop future spawns
-      clearInterval(fireInterval); // just in case
-      document.querySelectorAll('.fire').forEach(el => el.remove()); // clear all fire
+      clearInterval(fireInterval);                      // Stop creating
+      container.innerHTML = "";                         // Remove all fires
     }, 5000);
   </script>
 </body>
 </html>
-
